Working on entities, every entity connecting to database but there is not connection between them.

--- a/tickets-app/src/main/webapp/app/entities/event/event-detail.component.html
+++ b/tickets-app/src/main/webapp/app/entities/event/event-detail.component.html
@@ -5,6 +5,10 @@
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
+                <dt><span jhiTranslate="ticketsApp.event.categoryId">CategoryId</span></dt>
+                <dd>
+                    <span>{{event.categoryId}}</span>
+                </dd>
                 <dt><span jhiTranslate="ticketsApp.event.name">Name</span></dt>
                 <dd>
                     <span>{{event.name}}</span>
