--- a/tickets-app/src/main/webapp/app/entities/order/order-detail.component.html
+++ b/tickets-app/src/main/webapp/app/entities/order/order-detail.component.html
@@ -5,6 +5,10 @@
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
+                <dt><span jhiTranslate="ticketsApp.order.clientId">ClientId</span></dt>
+                <dd>
+                    <span>{{order.clientId.login}}</span>
+                </dd>
                 <dt><span jhiTranslate="ticketsApp.order.orderDate">Order Date</span></dt>
                 <dd>
                     <span>{{order.orderDate}}</span>
