--- a/tickets-app/src/main/webapp/app/entities/event/event-detail.component.html
+++ b/tickets-app/src/main/webapp/app/entities/event/event-detail.component.html
@@ -7,7 +7,7 @@
             <dl class="row-md jh-entity-details">
                 <dt><span jhiTranslate="ticketsApp.event.categoryId">CategoryId</span></dt>
                 <dd>
-                    <span>{{event.categoryId}}</span>
+                    <span>{{event.categoryId.name}}</span>
                 </dd>
                 <dt><span jhiTranslate="ticketsApp.event.name">Name</span></dt>
                 <dd>
