added first name and last name to register form

--- a/tickets-app/src/main/webapp/app/account/register/register.component.html
+++ b/tickets-app/src/main/webapp/app/account/register/register.component.html
@@ -72,6 +72,18 @@
                         </small>
                     </div>
                 </div>
+
+                <div class="form-group">
+                    <label class="form-control-label" for="firstName" jhiTranslate="global.form.firstName">First Name</label>
+                    <input type="text" class="form-control" id="firstName" name="firstName" #firstName="ngModel" placeholder="{{'global.form.firstName.placeholder' | translate}}"
+                           [(ngModel)]="registerAccount.firstName" minlength=4 maxlength=50 required>
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label" for="lastName" jhiTranslate="global.form.lastName">lastName</label>
+                    <input type="text" class="form-control" id="lastName" name="lastName" #lastName="ngModel" placeholder="{{'global.form.lastName.placeholder' | translate}}"
+                           [(ngModel)]="registerAccount.lastName" minlength=4 maxlength=50 required>
+                </div>
+
                 <div class="form-group">
                     <label class="form-control-label" for="password" jhiTranslate="global.form.newpassword">New password</label>
                     <input type="password" class="form-control" id="password" name="password" #password="ngModel" placeholder="{{'global.form.newpassword.placeholder' | translate}}"
