--- a/tickets-app/src/main/webapp/app/entities/event/event-update.component.html
+++ b/tickets-app/src/main/webapp/app/entities/event/event-update.component.html
@@ -7,42 +7,49 @@
                 <div class="form-group" [hidden]="!event.id">
                     <label for="id" jhiTranslate="global.field.id">ID</label>
                     <input type="text" class="form-control" id="id" name="id"
-                        [(ngModel)]="event.id" readonly />
+                           [(ngModel)]="event.id" readonly/>
                 </div>
                 <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="ticketsApp.event.categoryId" for="field_category">Category</label>
+                    <select name="categorySelect" class="form-control" id="field_category" [(ngModel)]="event.categoryId">
+                        <option *ngFor="let c of categories" [ngValue]="c">
+                            {{c.name}}
+                        </option>
+                    </select>
                     <label class="form-control-label" jhiTranslate="ticketsApp.event.name" for="field_name">Name</label>
                     <input type="text" class="form-control" name="name" id="field_name"
-                        [(ngModel)]="event.name" />
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="ticketsApp.event.eventDate" for="field_eventDate">Event Date</label>
+                           [(ngModel)]="event.name"/>
+
+                    <label class="form-control-label" jhiTranslate="ticketsApp.event.eventDate" for="field_eventDate">Event
+                        Date</label>
                     <div class="d-flex">
-                        <input id="field_eventDate" type="datetime-local" class="form-control" name="eventDate" [(ngModel)]="eventDate" placeholder="YYYY-MM-DD HH:mm"
+                        <input id="field_eventDate" type="datetime-local" class="form-control" name="eventDate"
+                               [(ngModel)]="eventDate" placeholder="YYYY-MM-DD HH:mm"
                         />
                     </div>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="ticketsApp.event.eventAddress" for="field_eventAddress">Event Address</label>
+
+                    <label class="form-control-label" jhiTranslate="ticketsApp.event.eventAddress"
+                           for="field_eventAddress">Event Address</label>
                     <input type="text" class="form-control" name="eventAddress" id="field_eventAddress"
-                        [(ngModel)]="event.eventAddress" />
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="ticketsApp.event.amountOfTickets" for="field_amountOfTickets">Amount Of Tickets</label>
+                           [(ngModel)]="event.eventAddress"/>
+
+                    <label class="form-control-label" jhiTranslate="ticketsApp.event.amountOfTickets"
+                           for="field_amountOfTickets">Amount Of Tickets</label>
                     <input type="number" class="form-control" name="amountOfTickets" id="field_amountOfTickets"
-                        [(ngModel)]="event.amountOfTickets" />
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="ticketsApp.event.description" for="field_description">Description</label>
+                           [(ngModel)]="event.amountOfTickets"/>
+
+                    <label class="form-control-label" jhiTranslate="ticketsApp.event.description"
+                           for="field_description">Description</label>
                     <input type="text" class="form-control" name="description" id="field_description"
-                        [(ngModel)]="event.description" />
+                           [(ngModel)]="event.description"/>
                 </div>
 
-            </div>
-            <div>
-                <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
+
+                <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
                     <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
                 </button>
-                <button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary">
+                <button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving"
+                        class="btn btn-primary">
                     <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
                 </button>
             </div>
