--- a/tickets-app/src/main/webapp/app/entities/order/order-update.component.html
+++ b/tickets-app/src/main/webapp/app/entities/order/order-update.component.html
@@ -10,6 +10,14 @@
                         [(ngModel)]="order.id" readonly />
                 </div>
                 <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="ticketsApp.order.clientId" for="field_client">Client</label>
+                    <select name="clientSelect" class="form-control" id="field_client" [(ngModel)]="order.clientId">
+                        <option *ngFor="let client of users" [ngValue]="client">
+                            {{client.login}}
+                        </option>
+                    </select>
+                </div>
+                <div class="form-group">
                     <label class="form-control-label" jhiTranslate="ticketsApp.order.orderDate" for="field_orderDate">Order Date</label>
                     <div class="d-flex">
                         <input id="field_orderDate" type="datetime-local" class="form-control" name="orderDate" [(ngModel)]="orderDate" placeholder="YYYY-MM-DD HH:mm"
