--- a/tickets-app/src/main/webapp/app/entities/event/event-detail.component.html
+++ b/tickets-app/src/main/webapp/app/entities/event/event-detail.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <div *ngIf="event">
-            <h2><span jhiTranslate="ticketsApp.event.detail.title">Event</span> {{event.id}}</h2>
+            <h2><span jhiTranslate="ticketsApp.event.detail.title">Event</span> {{event.name}}</h2>
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
@@ -37,7 +37,7 @@
                 <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
             </button>
 
-            <button type="button"
+            <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="button"
                     [routerLink]="['/event', event.id, 'edit']"
                     class="btn btn-primary">
                 <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
