Added columns price and image to entity Events.
Added EventLite view without price and image.
Added few images, and show them in event details.

--- a/tickets-app/src/main/webapp/app/entities/event/event-detail.component.html
+++ b/tickets-app/src/main/webapp/app/entities/event/event-detail.component.html
@@ -5,6 +5,9 @@
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
+                <dd>
+                    <img  src="{{path}}" alt="Event image">
+                </dd>
                 <dt><span jhiTranslate="ticketsApp.event.categoryId">CategoryId</span></dt>
                 <dd>
                     <span>{{event.categoryId.name}}</span>
@@ -20,6 +23,10 @@
                 <dt><span jhiTranslate="ticketsApp.event.eventAddress">Event Address</span></dt>
                 <dd>
                     <span>{{event.eventAddress}}</span>
+                </dd>
+                <dt><span jhiTranslate="ticketsApp.event.price">Cena</span></dt>
+                <dd>
+                    <span>{{event.price}}</span>
                 </dd>
                 <dt><span jhiTranslate="ticketsApp.event.amountOfTickets">Amount Of Tickets</span></dt>
                 <dd>
