--- a/tickets-app/src/main/webapp/app/entities/event/event-update.component.html
+++ b/tickets-app/src/main/webapp/app/entities/event/event-update.component.html
@@ -33,6 +33,11 @@
                     <input type="text" class="form-control" name="eventAddress" id="field_eventAddress"
                            [(ngModel)]="event.eventAddress"/>
 
+                    <label class="form-control-label" jhiTranslate="ticketsApp.event.price"
+                           for="field_price">Ticket price</label>
+                    <input type="number" class="form-control" name="price" id="field_price"
+                           [(ngModel)]="event.price"/>
+
                     <label class="form-control-label" jhiTranslate="ticketsApp.event.amountOfTickets"
                            for="field_amountOfTickets">Amount Of Tickets</label>
                     <input type="number" class="form-control" name="amountOfTickets" id="field_amountOfTickets"
@@ -42,6 +47,10 @@
                            for="field_description">Description</label>
                     <input type="text" class="form-control" name="description" id="field_description"
                            [(ngModel)]="event.description"/>
+                    <label class="form-control-label" jhiTranslate="ticketsApp.event.image"
+                           for="field_image">Image</label>
+                    <input type="text" class="form-control" name="image" id="field_image"
+                           [(ngModel)]="event.image"/>
                 </div>
 
 
