First stage, created shopping cart and submition components.

--- a/tickets-app/src/main/webapp/app/entities/event/event.component.html
+++ b/tickets-app/src/main/webapp/app/entities/event/event.component.html
@@ -88,6 +88,9 @@
                         </button>
                     </div>
                 </td>
+                <td>
+                    <a [routerLink]="['/shopping-cart', { id:event.id }]">Buy Now</a>
+                </td>
             </tr>
             </tbody>
         </table>
