--- a/tickets-app/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/tickets-app/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -115,6 +115,14 @@
                     <!-- jhipster-needle-add-element-to-admin-menu - JHipster will add entities to the admin menu here -->
                 </ul>
             </li>
+            <li *jhiHasAnyAuthority="'ROLE_USER'" class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <a class="nav-link" routerLink="shopping-cart" (click)="collapseNavbar()">
+                    <span>
+                        <fa-icon icon="calendar-alt"></fa-icon>
+                        <span jhiTranslate="global.menu.shopping-cart">Cart</span>
+                    </span>
+                </a>
+            </li>
             <li ngbDropdown class="nav-item dropdown pointer" *ngIf="languages && languages.length > 1">
                 <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="languagesnavBarDropdown">
                     <span>
