Added translations, request that sending email after order, some validations and few small features.

--- a/tickets-app/src/main/webapp/app/entities/event/event.component.html
+++ b/tickets-app/src/main/webapp/app/entities/event/event.component.html
@@ -89,7 +89,7 @@
                     </div>
                 </td>
                 <td>
-                    <a [routerLink]="['/shopping-cart', { id:event.id }]">Buy Now</a>
+                    <a [routerLink]="['/shopping-cart', { id:event.id }]"><span jhiTranslate="ticketsApp.event.buy">Buy now</span></a>
                 </td>
             </tr>
             </tbody>
