--- a/tickets-app/src/main/webapp/app/shopping-cart/submit/submit.component.html
+++ b/tickets-app/src/main/webapp/app/shopping-cart/submit/submit.component.html
@@ -1,4 +1,4 @@
-<h3>Cart Info</h3>
+<h3><span jhiTranslate="ticketsApp.event.cart">Option</span></h3>
 
 <div class="table-responsive">
     <table class="table table-striped">
@@ -30,7 +30,7 @@
     <button class="right" type="submit"
             [routerLink]="['/payment']"
             class="btn btn-info">
-        <fa-icon [icon]="'arrow-right'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.payment"> Payment</span>
+        <fa-icon [icon]="'arrow-right'"></fa-icon>&nbsp;<span jhiTranslate="ticketsApp.event.payment"> Payment</span>
     </button>
 </div>
 
