Sending confirmation mail done

--- a/tickets-app/src/main/resources/templates/mail/sentTicketsMail.html
+++ b/tickets-app/src/main/resources/templates/mail/sentTicketsMail.html
@@ -9,6 +9,9 @@
 <p th:text="#{email.tickets.greeting(${user.login})}">
     Dear
 </p>
+<p th:text="#{email.tickets.text3}">
+    Thanks
+</p>
 <p th:text="#{email.tickets.text1}">
     Your tickets:
 </p>
