--- a/tickets-app/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/tickets-app/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -138,6 +138,15 @@
                     </span>
                 </a>
             </li>
+            <li *jhiHasAnyAuthority="'ROLE_USER'" class="nav-item" routerLinkActive="active"
+                [routerLinkActiveOptions]="{exact: true}">
+                <a class="nav-link" routerLink="history" (click)="collapseNavbar()">
+                    <span>
+                        <fa-icon icon="shopping-cart"></fa-icon>
+                        <span jhiTranslate="global.menu.history">History</span>
+                    </span>
+                </a>
+            </li>
             <li ngbDropdown class="nav-item dropdown pointer" *ngIf="languages && languages.length > 1">
                 <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);"
                    id="languagesnavBarDropdown">
