--- a/tickets-app/src/main/webapp/app/History/history-tickets/history-tickets.component.html
+++ b/tickets-app/src/main/webapp/app/History/history-tickets/history-tickets.component.html
@@ -1,23 +1,49 @@
 <div class="row justify-content-center">
-    <div class="col-8">
-        <div *ngIf="order">
-            <h2><span jhiTranslate="ticketsApp.order.detail.title">Order</span> {{order.id}}</h2>
-            <hr>
-            <jhi-alert-error></jhi-alert-error>
-            <dl class="row-md jh-entity-details">
-                <dt><span jhiTranslate="ticketsApp.order.clientId">ClientId</span></dt>
-                <dd>
-                    <span>{{order.clientId.login}}</span>
-                </dd>
-                <dt><span jhiTranslate="ticketsApp.order.orderDate">Order Date</span></dt>
-                <dd>
-                    <span>{{order.orderDate}}</span>
-                </dd>
-                <dt><span jhiTranslate="ticketsApp.order.isPaid">Is Paid</span></dt>
-                <dd>
-                    <span>{{order.isPaid}}</span>
-                </dd>
-            </dl>
-        </div>
+    <h2><span jhiTranslate="ticketsApp.event.confirmation">Confirmation page</span></h2>
+
+</div>
+<div>
+    <p id="error-messege"></p>
+</div>
+<div>
+    <div >
+        <h2><span jhiTranslate="ticketsApp.order.detail.title">Order</span> {{order.id}}</h2>
+        <hr>
+        <jhi-alert-error></jhi-alert-error>
+        <dl class="row-md jh-entity-details">
+            <dt><span jhiTranslate="ticketsApp.order.orderDate">Order Date</span></dt>
+            <dd>
+                <span>{{order.orderDate}}</span>
+            </dd>
+            <dt><span jhiTranslate="ticketsApp.order.isPaid">Is Paid</span></dt>
+            <dd>
+                <span>{{order.isPaid}}</span>
+            </dd>
+        </dl>
     </div>
+    <h3><span jhiTranslate="ticketsApp.event.yourTickets">Your tickets:</span></h3>
+    <div class="table-responsive" *ngIf="tickets">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th><span jhiTranslate="global.field.id">ID</span></th>
+                <th><span jhiTranslate="ticketsApp.ticket.eventId">Event name</span></th>
+                <th><span jhiTranslate="ticketsApp.ticket.price">Price</span></th>
+                <th><span jhiTranslate="ticketsApp.ticket.discount">Discount</span></th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let ticket of tickets ;trackBy: trackId">
+                <td><a [routerLink]="['/ticket', ticket.id, 'view' ]">{{ticket.id}}</a></td>
+                <td>{{ticket.eventId.name}}</td>
+                <td>{{ticket.price}}</td>
+                <td>{{ticket.discount}}</td>
+                <td class="text-right">
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 </div>
