Added some design upgrade in event list

--- a/tickets-app/src/main/webapp/app/History/history/history.component.html
+++ b/tickets-app/src/main/webapp/app/History/history/history.component.html
@@ -15,8 +15,8 @@
             <tbody>
             <tr *ngFor="let order of orders ;trackBy: trackId">
                 <td>{{order.id}}</td>
-                <td>{{order.orderDate | date:'medium'}}</td>
-                <td>{{order.isPaid}}</td>
+                <td>{{order.orderDate | date:'longDate'}}</td>
+                <td>{{order.isPaid| paymentStatusPipek:order.isPaid}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
