--- a/tickets-app/src/main/webapp/app/shopping-cart/shopping-cart/shopping-cart.component.html
+++ b/tickets-app/src/main/webapp/app/shopping-cart/shopping-cart/shopping-cart.component.html
@@ -21,7 +21,7 @@
             </td>
             <td>{{item.event.categoryId.name}}</td>
             <td>{{item.event.name}}</td>
-            <td>{{item.event.eventDate | date:'medium'}}</td>
+            <td>{{item.event.eventDate | date:'longDate'}}</td>
             <td>{{item.event.eventAddress}}</td>
             <td>{{item.event.amountOfTickets}}</td>
             <td>{{item.quantity}}</td>
