--- a/tickets-app/src/main/webapp/app/entities/event/event-detail.component.html
+++ b/tickets-app/src/main/webapp/app/entities/event/event-detail.component.html
@@ -4,6 +4,10 @@
             <h2><span jhiTranslate="ticketsApp.event.detail.title">Event</span> {{event.name}}</h2>
             <hr>
             <jhi-alert-error></jhi-alert-error>
+            <td>
+                <a [routerLink]="['/shopping-cart', { id:event.id }]"><span jhiTranslate="ticketsApp.event.buy">Buy now</span></a>
+            </td>
+            <br>
             <dl class="row-md jh-entity-details">
                 <dd>
                     <img  src="{{path}}" alt="Event image">
@@ -18,7 +22,7 @@
                 </dd>
                 <dt><span jhiTranslate="ticketsApp.event.eventDate">Event Date</span></dt>
                 <dd>
-                    <span>{{event.eventDate}}</span>
+                    <span>{{event.eventDate| date:'longDate'}}</span>
                 </dd>
                 <dt><span jhiTranslate="ticketsApp.event.eventAddress">Event Address</span></dt>
                 <dd>
@@ -49,6 +53,7 @@
                     class="btn btn-primary">
                 <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
             </button>
+
         </div>
     </div>
 </div>
