user authentication changes, todo added

--- a/tickets-app/src/main/webapp/app/entities/event/event.component.html
+++ b/tickets-app/src/main/webapp/app/entities/event/event.component.html
@@ -115,7 +115,7 @@
                     </div>
                 </td>
                 <td>
-                    <a [routerLink]="['/shopping-cart', { id:event.id }]"><span jhiTranslate="ticketsApp.event.buy">Buy now</span></a>
+                    <a *jhiHasAnyAuthority="'ROLE_USER'" [routerLink]="['/shopping-cart', { id:event.id }]"><span jhiTranslate="ticketsApp.event.buy">Buy now</span></a>
                 </td>
             </tr>
             </tbody>
