--- a/tickets-app/src/main/webapp/app/home/home.component.html
+++ b/tickets-app/src/main/webapp/app/home/home.component.html
@@ -1,3 +1,13 @@
+<slideshow [height]="'400px'"
+           [minHeight]="'525px'"
+           [autoPlay]="true"
+           [showArrows]="true"
+           [showDots]="true"
+           [imageUrls]="imageSources"
+           [lazyLoad]="imageSources?.length > 1"
+           [autoPlayWaitForLazyLoad]="true">
+</slideshow>
+
 <div class="row">
     <div class="col-md-3">
         <span class="hipster img-fluid rounded"></span>
@@ -21,10 +31,6 @@
                 <a class="alert-link" routerLink="register" jhiTranslate="global.messages.info.register.link">Register a new account</a>
             </div>
         </div>
-
-
-
-
 
     </div>
 </div>
